config: php해킹봇 차단 추가